--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Deanpinlac_COMP304Sec002_Lab2">
-        <activity android:name=".CheckoutActivity"></activity>
-        <activity android:name=".PizzaDetails" />
-        <activity android:name=".Menu" />
+        <activity android:name=".SummaryActivity"></activity>
+        <activity android:name=".CustomerInfoActivity" />
+        <activity android:name=".PaymentActivity" />
+        <activity android:name=".CheckoutActivity" />
+        <activity android:name=".PizzaDetailsActivity" />
+        <activity android:name=".MenuActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
